--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://example.com/
+baseURL: https://liwm29.github.io/
 theme: pure
 title: Pure theme for Hugo
 copyright: CC BY 4.0 CN
@@ -101,15 +101,15 @@ params:
     enabled: true # Whether to show profile bar
     avatar: avatar.png
     gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-    author: xiaoheiAh
+    author: liwm29
     author_title: author title
     author_description: Good Good Study, Day Day Up~
-    location: Shanghai, China
+    location: Guangzhou, China
     follow: https://github.com/xiaoheiAh
     # Social Links
     social:
       links:
-        github: https://github.com/xiaoheiAh
+        github: https://github.com/liwm29
         # weibo: http://weibo.com/{yourid}
         # twitter: https://twitter.com/
         # facebook: /
